# open3d-mlx

./: .gitignore  LICENSE  PROMPT.md  README.md  SESSION_RESTART.md  UPSTREAM_VERSION.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: test.yml
benchmarks/: bench_icp.py  bench_io.py  bench_nn.py  bench_pointcloud.py  bench_tsdf.py  conftest.py
examples/: 01_pointcloud_basics.py  02_io_read_write.py  03_icp_registration.py  04_tsdf_reconstruction.py  05_raycasting.py  06_robust_kernels.py  07_nearest_neighbor.py  08_full_pipeline.py  README.md
open3d_mlx/: __init__.py  interop.py
open3d_mlx/camera/: __init__.py  intrinsics.py
open3d_mlx/core/: __init__.py  device.py  dtype.py  tensor_utils.py
open3d_mlx/geometry/: __init__.py  boundingbox.py  kdtree.py  pointcloud.py
open3d_mlx/io/: __init__.py  pcd.py  ply.py  pointcloud_io.py  pts.py  xyz.py
open3d_mlx/ops/: __init__.py  fixed_radius_nn.py  linalg.py  nearest_neighbor.py  normals.py
open3d_mlx/pipelines/: __init__.py
prds/: PRD-00-PROJECT-FOUNDATION.md  PRD-01-CORE-TYPES.md  PRD-02-POINTCLOUD-GEOMETRY.md  PRD-03-POINTCLOUD-IO.md  PRD-04-KDTREE-NEAREST-NEIGHBOR.md  PRD-05-ICP-POINT-TO-POINT.md  PRD-06-ICP-POINT-TO-PLANE.md  PRD-07-ICP-ADVANCED.md  PRD-08-TSDF-VOLUME.md  PRD-09-TSDF-ADVANCED.md  PRD-10-RAYCASTING.md  PRD-11-BENCHMARKS-CI.md  PRD-12-DOCS-POLISH.md  README.md
scripts/: sync_upstream.sh
tests/: conftest.py  test_import.py  test_interop.py
tests/data/: generate_test_data.py
tests/test_core/: test_device.py  test_dtype.py  test_tensor_utils.py
tests/test_io/: __init__.py  (+6 more)
(+37 files in other folders)
